# minilaunch

./: .gitignore  Cargo.toml  README.md
src/: cli.rs  db.rs  main.rs  menu.rs  steam.rs  steamapi.rs  tui.rs  utils.rs
src/sql/: add_game.sql  get_all_games.sql  get_game_by_name.sql  get_games.sql  increment_count.sql  new_game.sql  schema.sql
