[package]
name = "minilaunch"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ratatui = "0.26.3"
crossterm = "0.27.0"
clap = { version = "4.5.7", features = ["derive"] }
rusqlite = { version = "0.31.0", features = [ "bundled" ] }
fuzzy-matcher = "0.3.7"
dotenv = "0.15.0"
reqwest = { version = "0.12.5", features = ["blocking"] }
serde_json = "1.0"
