[package]
name = "minilaunch"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rusqlite = {version = "0.32.1", features = ["bundled"]}
reqwest = {version = "0.12.8", features = ["blocking"]}

crossterm = "0.28.1"
inquire = "0.7.5"
